@@ -1,3 +1,5 @@
+* Remove `in` operator checks on control elements and test hasFocus() method exists before using it. [Diego Perini, jddalton]
+
 * Avoid checking for strict booleans on control elements, they are actually strings if set in the source HTML as attribute values. [Diego Perini]
 
 * Reduce code in normalize() and make forEachCall() use `++i` and replace repeated string in compileSelector() with `strEdgeSpace`. [jddalton]
